gitops/apps/argocd/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-cloudflare
  namespace: argocd
spec:
  ingressClassName: traefik

  rules:
    - host: argocd.ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
