gitops/apps/argocd/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tailnet
  namespace: argocd
  annotations:
    tailscale.com/proxy-class: stable-proxies
spec:
  ingressClassName: tailscale

  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80

  tls:
    - hosts:
        - argocd
